# ryzomcore

./: .gitignore  CMakeLists.txt  CMakePresets.json  azure-pipelines.yml  chocolatey.config  config.h.cmake  docker-compose.yaml  vcpkg-configuration.json  vcpkg.json
nel/: CMakeLists.txt  CMakePresets.json
nel/include/nel/3d/: clip_trav.h  computed_string.h  deform_2d.h  driver.h  driver_material_inline.h  driver_user.h  dru.h  flare_model.h  font_generator.h  gpu_skin_vp.h  index_buffer.h  landscape_def.h  landscapevb_allocator.h  material.h  mesh.h  mesh_instance.h  mesh_mrm.h  mesh_mrm_instance.h  mesh_mrm_skinned.h  mesh_mrm_skinned_instance.h  meshvp_per_pixel_light.h  meshvp_wind_tree.h  ordering_table.h  particle_system.h  particle_system_model.h  point_light.h  program.h  ps_attrib_maker.h  ps_attrib_maker_helper.h  ps_attrib_maker_iterators.h  ps_dot.h  ps_mesh.h  ps_quad.h  render_target_manager.h  render_trav.h  scene.h  scene_user.h  seg_remanence.h  stereo_debugger.h  stereo_display.h  (+18 more)
nel/include/nel/gui/: lua_helper.h
nel/include/nel/misc/: base64.h  callback.h  debug.h  entity_id.h  string_common.h  wang_hash.h
nel/samples/3d/: CMakeLists.txt  index.html
nel/samples/georges/: CMakeLists.txt
nel/samples/pacs/: CMakeLists.txt
nel/src/3d/: CMakeLists.txt  bloom_effect.cpp  clip_trav.cpp  cloud.cpp  coarse_mesh_manager.cpp  computed_string.cpp  deform_2d.cpp  driver.cpp  driver_user.cpp  dru.cpp  flare_model.cpp  font_generator.cpp  fxaa.cpp  fxaa_program.h  gpu_skin_vp.cpp  index_buffer.cpp  landscape.cpp  landscapevb_allocator.cpp  mesh.cpp  mesh_instance.cpp  mesh_mrm.cpp  mesh_mrm_instance.cpp  mesh_mrm_skinned.cpp  mesh_mrm_skinned_instance.cpp  mesh_multi_lod.cpp  meshvp_wind_tree.cpp  motion_blur.cpp  nelu.cpp  particle_system.cpp  particle_system_model.cpp  patch_render.cpp  point_light.cpp  program.cpp  ps_dot.cpp  ps_fan_light.cpp  ps_mesh.cpp  ps_quad.cpp  ps_ribbon.cpp  ps_ribbon_look_at.cpp  ps_shockwave.cpp  (+29 more)
nel/src/cegui/: CMakeLists.txt
nel/src/georges/: CMakeLists.txt
nel/src/gui/: CMakeLists.txt  group_menu.cpp  lua_helper.cpp
nel/src/ligo/: CMakeLists.txt
nel/src/logic/: CMakeLists.txt
nel/src/misc/: CMakeLists.txt  bitmap_png.cpp  cdb_branch.cpp  cdb_branch_observing_handler.cpp  cdb_leaf.cpp  cdb_manager.cpp  command.cpp  debug.cpp  displayer.cpp  i_xml.cpp  o_xml.cpp  p_thread.cpp  stdmisc.h  time_nl.cpp  xml_auto_ptr.cpp
nel/src/net/: CMakeLists.txt  buf_net_base.cpp  buf_server.cpp  callback_client.cpp  callback_net_base.cpp  callback_server.cpp  inet_address.cpp  ipv6_address.cpp  login_cookie.cpp  service.cpp  sock.cpp  unified_network.cpp
nel/src/pacs/: CMakeLists.txt
nel/src/pipeline/: CMakeLists.txt
nel/src/sound/: CMakeLists.txt  audio_decoder_vorbis.cpp
nel/src/web/: CMakeLists.txt  http_client_curl.cpp
nel/tools/: CMakeLists.txt
nel/tools/3d/: CMakeLists.txt
nel/tools/htmlcss_test/: CMakeLists.txt
nel/tools/misc/: CMakeLists.txt
nel/tools/nel_unit_test/: CMakeLists.txt  nel_unit_test.cpp  ut_ligo_primitive.test.cpp  ut_misc_base64.test.cpp  ut_misc_co_task.test.cpp  ut_misc_command.test.cpp  ut_misc_common.test.cpp  ut_misc_config_file.test.cpp  ut_misc_debug.test.cpp  ut_misc_dynlibload.test.cpp  ut_misc_file.test.cpp  ut_misc_pack_file.test.cpp  ut_misc_singleton.test.cpp  ut_misc_sstring.test.cpp  ut_misc_stream.test.cpp  ut_misc_string_common.test.cpp  ut_misc_types.test.cpp  ut_misc_variable.test.cpp  ut_net.h  ut_net_address.test.cpp  ut_net_layer3.test.cpp  ut_net_message.test.cpp  ut_net_module.h  ut_net_module.test.cpp  ut_sound_openal.it.cpp  ut_web_http_client.it.cpp
nelns/: CMakeLists.txt  CMakePackaging.txt  CMakePresets.json
nelns/admin/public_html/: admin.php  backup_interface.php  commands.php  custom_view.php  display_view.php  help.php  index.php  init.php  las_interface.php  prefs.php  request_interface.php  session_auth.php  sql_connection.php  update_daily.php
nelns/admin_executor_service/: CMakeLists.txt
nelns/admin_service/: CMakeLists.txt
nelns/docker/: Dockerfile
nelns/login_service/: CMakeLists.txt  connection_client.cpp  login_service.cpp
nelns/login_service/tests/: CMakeLists.txt  login_service_client_connection.it.cpp  mock_persistence.h
nelns/login_system/: CMakeLists.txt
nelns/login_system/nel_launcher_qt/: CMakeLists.txt  main.cpp  nel_launcher_dlg.cpp
nelns/login_system/nel_launcher_windows_ext2/: CMakeLists.txt
nelns/naming_service/: CMakeLists.txt
nelns/naming_service/tests/: CMakeLists.txt  naming_service.it.cpp
nelns/welcome_service/: CMakeLists.txt
ryzom/: CMakeLists.txt  CMakePresets.json
ryzom/client/: CMakeLists.txt  client_default.cfg
ryzom/client/src/: CMakeLists.txt  camera.cpp  client_cfg.cpp  client_cfg.h  connection.cpp  continent_manager.cpp  decal.cpp  entity_cl.cpp  far_tp.cpp  init.cpp  init_main_loop.cpp  input.cpp  input.h  login.cpp  login_patch.cpp  main_loop.cpp  main_loop.h  main_loop_temp.cpp  main_loop_utilities.cpp  misc.cpp  release.cpp  user_agent.cpp  user_entity.cpp  weather.cpp  weather.h
ryzom/server/tools/: monitor_coredumps.py
ryzom/tools/: CMakeLists.txt
ryzom/tools/assoc_mem/: CMakeLists.txt
ryzom/tools/client/: CMakeLists.txt
ryzom/tools/make_alias_file/: CMakeLists.txt
ryzom/tools/make_anim_by_race/: CMakeLists.txt
ryzom/tools/make_anim_melee_impact/: CMakeLists.txt
ryzom/tools/occ2huff/: CMakeLists.txt
ryzom/tools/patch_gen/: CMakeLists.txt
ryzom/tools/pd_parser/: CMakeLists.txt
ryzom/tools/pdr_util/: CMakeLists.txt
ryzom/tools/phrase_generator/: CMakeLists.txt
ryzom/tools/sheet_random_generator/: CMakeLists.txt
ryzom/tools/sheets_packer/: CMakeLists.txt
ryzom/tools/sheets_packer_shard/: CMakeLists.txt
ryzom/tools/skill_extractor/: CMakeLists.txt
ryzom/tools/stats_scan/: CMakeLists.txt
ryzom/tools/translation_tools/: CMakeLists.txt
snowballs2/client/src/: CMakeLists.txt  camera.cpp  snowballs_client.cpp
snowballs2/server/position/: CMakeLists.txt
studio/src/: CMakeLists.txt
studio/src/libqtpropertybrowser-text/: CMakeLists.txt
(+584 files in other folders)
