FILE(GLOB SRC *.cpp *.h)
FILE(GLOB HEADERS ../../include/nel/cegui/*.h)

ADD_LIBRARY(nelceguirenderer SHARED ${HEADERS} ${SRC} nelceguirenderer.def)

TARGET_INCLUDE_DIRECTORIES(nelceguirenderer BEFORE ${FREETYPE_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(nelceguirenderer ${CEGUI_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(nelceguirenderer nelmisc nel3d LibXml2::LibXml2 ${CEGUI_LIBRARY})
NL_DEFAULT_PROPS(nelceguirenderer "NeL, Library: CEGUI Renderer")
NL_ADD_RUNTIME_FLAGS(nelceguirenderer)
NL_ADD_LIB_SUFFIX(nelceguirenderer)

TARGET_COMPILE_DEFINITIONS(nelceguirenderer PRIVATE NEL_CEGUIRENDERER_EXPORTS)

IF(WITH_INSTALL_LIBRARIES OR NOT WITH_STATIC)
  INSTALL(TARGETS nelceguirenderer RUNTIME DESTINATION ${NL_BIN_PREFIX} LIBRARY DESTINATION ${NL_LIB_PREFIX} ARCHIVE DESTINATION ${NL_LIB_PREFIX} COMPONENT libraries)
ENDIF()
